# slopgb

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.md  goal.md  rust-toolchain.toml
crates/slopfp/: CLAUDE.md  Cargo.toml
crates/slopfp/src/: lib.rs  model.rs  model_tests.rs  source.rs  source_tests.rs
crates/slopfp/tests/: nav.rs
crates/slopgb/: CLAUDE.md  Cargo.toml
crates/slopgb-core/: CLAUDE.md  Cargo.toml
crates/slopgb-core/examples/: boot_check.rs  boot_frames.rs  cgb_palette_extract.rs  disasm_region.rs  dump_frame.rs  gen_boot_logo.rs  run_gambatte.rs  run_mooneye.rs  run_wilbertpol.rs
crates/slopgb-core/src/: apu.rs  cartridge.rs  cartridge_tests.rs  cycle_clock.rs  cycle_clock_tests.rs  debug.rs  interconnect.rs  interconnect_pcm_probe.rs  interconnect_tests.rs  joypad.rs  joypad_tests.rs  lib.rs  lib_tests.rs  mode_timeline.rs  mode_timeline_tests.rs  model.rs  model_tests.rs  ppu.rs  probe.rs  serial.rs  serial_tests.rs  stat_update.rs  stat_update_tests.rs  state.rs  state_tests.rs  timer.rs  timer_tests.rs
crates/slopgb-core/src/apu/: envelope.rs  length.rs  mod.rs  noise.rs  pulse.rs  pulse_tests.rs  tests.rs  wave.rs
crates/slopgb-core/src/cartridge/: banking.rs  header.rs  mbc6.rs  rtc.rs  save.rs  state.rs
crates/slopgb-core/src/cartridge_tests/: banks.rs  mbc6.rs
crates/slopgb-core/src/cpu/: execute.rs  execute_tests.rs  mod.rs  registers.rs  registers_tests.rs
crates/slopgb-core/src/debug/: disasm.rs  disasm_tests.rs  palette.rs  palette_tests.rs  vram.rs  vram_tests.rs
crates/slopgb-core/src/interconnect/: accessors.rs  boot.rs  boot_rom.rs  bus.rs  cycle.rs  debug.rs  hdma.rs  link.rs  memory.rs  oam_dma.rs  phase.rs  speed.rs  state.rs  tick.rs
crates/slopgb-core/src/interconnect_tests/: boot.rs  hdma.rs  irq.rs  memory.rs  oam_bug.rs  oam_dma.rs  speed.rs  subdot.rs
crates/slopgb-core/src/lib/: debug.rs  sgb_api.rs
crates/slopgb-core/src/lib_tests/: boot.rs  cdl.rs  debug.rs  ram.rs  run.rs  savestate.rs  sgb.rs
crates/slopgb-core/src/ppu/: access.rs  blocking.rs  engine.rs  line_setup.rs  lyc.rs  mod.rs  mod_tests.rs  oam_bug.rs  regs.rs  render.rs  render_tests.rs  sgb.rs  sgb_tests.rs  stat_irq.rs  state.rs
crates/slopgb-core/src/sgb/: apu.rs  apu_tests.rs  mod.rs
crates/slopgb-core/tests/: audio_input_smoke.rs  bootrom.rs  fuzz.rs  integration.rs  mbc6.rs  mooneye.rs  realtime_perf.rs  sgb_bootrom.rs  source_size.rs
crates/slopgb-core/tests/common/: framecmp.rs  mod.rs  mod_tests.rs  png.rs  png_tests.rs  protocol.rs
crates/slopgb-core/tests/gbtr/: acid.rs  age.rs  blargg.rs  gambatte.rs  gambatte_flagon_probe.rs  gambatte_pixel_probe.rs  gbmicrotest.rs  golden.rs  harness.rs  inventory.rs  main.rs  mealybug.rs  mooneye2022.rs  same_suite.rs  (+2 more)
crates/slopgb-msu1-plugin/: Cargo.toml
crates/slopgb-msu1-plugin/src/: lib.rs  lib_tests.rs
crates/slopgb-plugin-api/: CLAUDE.md  Cargo.toml
crates/slopgb-plugin-api/src/: abi.rs  args.rs  args_tests.rs  coprocessor.rs  lib.rs  lib_tests.rs  tool.rs  view.rs
crates/slopgb-plugin-host/: CLAUDE.md  Cargo.toml
crates/slopgb-plugin-host/src/: coprocessor.rs  host.rs  host_tests.rs  lib.rs  manifest.rs  manifest_tests.rs  registry.rs  registry_tests.rs  snapshot.rs  snapshot_tests.rs  tool.rs
crates/slopgb-plugin-host/tests/: coprocessor_roundtrip.rs  msu1_roundtrip.rs  roundtrip.rs  sf2_roundtrip.rs  snes_ppu_roundtrip.rs  spc700_roundtrip.rs  tool_roundtrip.rs  w65c816_roundtrip.rs
crates/slopgb-sf2/: Cargo.toml
crates/slopgb-sf2-plugin/: Cargo.toml
crates/slopgb-sf2-plugin/src/: lib.rs  lib_tests.rs
crates/slopgb-sf2/src/: brr.rs  brr_tests.rs  cache.rs  cache_tests.rs  lib.rs  mapping.rs  mapping_tests.rs  reader.rs  reader_tests.rs  resample.rs  resample_tests.rs  riff.rs  riff_tests.rs  writer.rs  writer_tests.rs
crates/slopgb-sf2/tests/: roundtrip_rom.rs
crates/slopgb-sgb-coprocessor/: Cargo.toml
crates/slopgb-sgb-coprocessor/examples/: throughput.rs
crates/slopgb-sgb-coprocessor/nspc/: Makefile  README.md  engine.asm
crates/slopgb-sgb-coprocessor/src/: audio_coprocessor.rs  clocking.rs  commands.rs  dma.rs  firmware.rs  flush.rs  lib.rs  lib_tests.rs  lib_tests_apu.rs  lib_tests_dma.rs  lib_tests_msu.rs  lib_tests_ppu.rs  load.rs  mixer.rs  mmio.rs  perf.rs  render.rs  samples.rs  samples_tests.rs  state.rs
crates/slopgb-snes-apu/: Cargo.toml
crates/slopgb-snes-apu/src/: lib.rs  spc_file.rs  spc_file_tests.rs  state.rs  state_tests.rs
crates/slopgb-snes-ppu/: Cargo.toml
crates/slopgb-snes-ppu-plugin/: Cargo.toml
crates/slopgb-snes-ppu-plugin/src/: lib.rs  lib_tests.rs
crates/slopgb-snes-ppu/src/: frame.rs  frame_tests.rs  lib.rs  lib_tests.rs  obj.rs  obj_tests.rs  render.rs  render_tests.rs  state.rs
crates/slopgb-snes-ppu/tests/: bench_state.rs
crates/slopgb-spc700-plugin/: Cargo.toml
crates/slopgb-spc700-plugin/src/: lib.rs  lib_tests.rs
crates/slopgb-w65c816/: CLAUDE.md  Cargo.toml
crates/slopgb-w65c816-plugin/: Cargo.toml
crates/slopgb-w65c816-plugin/src/: icd2.rs  icd2_tests.rs  lib.rs  lib_tests.rs  mmio.rs  mmio_tests.rs
crates/slopgb-w65c816/src/: addressing.rs  cpu.rs  dispatch.rs  lib.rs  ops_arith.rs  ops_block.rs  ops_branch.rs  ops_ctrl.rs  ops_flow.rs  ops_interrupt.rs  ops_load.rs  ops_logic.rs  ops_stack.rs  regs.rs  regs_tests.rs
crates/slopgb-w65c816/tests/: nmi.rs  vectors.rs
crates/slopgb/reference-tools/: Cargo.toml
crates/slopgb/src/: app_boot.rs  app_boot_tests.rs  app_draw.rs  app_handler.rs  app_input.rs  app_keys.rs  app_menu.rs  app_menu_tests.rs  app_pacing.rs  app_path.rs  app_path_tests.rs  app_run.rs  app_run_tests.rs  audio.rs  avi.rs  avi_tests.rs  cdl.rs  cheat.rs  cheat_tests.rs  cheat_ui.rs  cheat_ui_tests.rs  cli.rs  cli_tests.rs  clipboard.rs  clipboard_tests.rs  dbg.rs  dbg_tests.rs  fallback_picker.rs  fallback_picker_tests.rs  file_picker.rs  file_picker_tests.rs  filepicker.rs  filepicker_tests.rs  gamepad.rs  gamepad_tests.rs  input.rs  keymap.rs  keymap_tests.rs  link.rs  link_tests.rs  (+32 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+429 files in other folders)
