[workspace]
resolver = "3"
members = ["crates/slopgb-core", "crates/slopgb"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/FDDTheLucario/slopgb"

[profile.release]
lto = "thin"
codegen-units = 1

# Test ROMs run thousands of frames; opt them even in dev test runs.
[profile.dev.package.slopgb-core]
opt-level = 2

[profile.test.package.slopgb-core]
opt-level = 2
