[workspace]
resolver = "3"
members = [
    "crates/slopgb-core",
    "crates/slopgb",
    "crates/slopfp",
    "crates/slopgb-msu1-plugin",
    "crates/slopgb-plugin-api",
    "crates/slopgb-plugin-host",
    "crates/slopgb-sgb-coprocessor",
    "crates/slopgb-snes-apu",
    "crates/slopgb-snes-ppu",
    "crates/slopgb-snes-ppu-plugin",
    "crates/slopgb-spc700-plugin",
    "crates/slopgb-w65c816",
    "crates/slopgb-w65c816-plugin",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/FDDTheLucario/slopgb"

[workspace.lints.rust]
# forbid unsafe across every workspace crate (core, frontend, slopfp). Crates
# opt in with `[lints] workspace = true`. slopfp keeps its own inline
# `#![forbid(unsafe_code)]` too, so it stays liftable standalone.
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1

# Test ROMs run thousands of frames; opt them even in dev test runs.
[profile.dev.package.slopgb-core]
opt-level = 2

[profile.test.package.slopgb-core]
opt-level = 2
