[package]
name = "xtask"
description = "Dev-only build tasks (std only, not shipped): build + stage the wasm coprocessor plugins."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
# Std only otherwise — shells out to `cargo` and copies files. `slopgb-sf2` is
# std-only/zero-dep itself, so this stays lean (gen-sf2 needs its exporter).
slopgb-sf2 = { path = "../crates/slopgb-sf2" }

[lints]
workspace = true
