[package]
name = "slopgb-core"
description = "Cycle-accurate Game Boy / Game Boy Color emulator core. Zero dependencies."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
# Opt-in SameBoy-port measurement harness (read/wake/ISR traces + tier2 sweep
# knobs). Off by default so the production build stays byte-identical. See
# src/probe.rs.
port_probe = []

[dependencies]
# Intentionally empty. The core stays dependency-free.

[dev-dependencies]
# Self-reference enabling `port_probe` for THIS crate's own tests + examples
# only (the SameBoy-port harness + the tier2 flip hooks live behind it). The
# frontend depends on slopgb-core without this feature, so the flip setters are
# `#[cfg(...)]`-compiled out of the production build — the golden-safe law is
# compile-enforced, not reviewer-enforced. Resolver v3 keeps dev-dep features
# out of the frontend's normal build.
slopgb-core = { path = ".", features = ["port_probe"] }

[lints]
workspace = true
