[package]
name = "slopgb-msu1-plugin"
description = "slopgb coprocessor plugin: an MSU-1 streaming-audio chip (register interface + resident-handler/polled-mailbox mode) hosted in a wasm sandbox, streaming a user-supplied .pcm track and reading a .msu data ROM through the v4 bulk-file channel."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# cdylib is the loadable wasm artifact; rlib lets the native unit tests link the
# pure register/decoder logic directly (it is target-independent).
crate-type = ["cdylib", "rlib"]

[dependencies]
slopgb-plugin-api = { path = "../slopgb-plugin-api" }

# NOT `[lints] workspace = true`: the wasm export macro needs the
# `#[unsafe(no_mangle)]` linkage marker the workspace `forbid(unsafe_code)`
# rejects; `deny` lets the macro scope-`allow` it, everything else stays safe.
[lints.rust]
unsafe_code = "deny"
