[package]
name = "slopgb-sgb-coprocessor"
description = "Combined SGB SNES-side audio coprocessor: loads the clean-room 65C816 + SPC700 + S-DSP as wasm coprocessor plugins and mediates them, exposed as a slopgb-core AudioCoprocessor. No unsafe."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slopgb-core = { path = "../slopgb-core" }
slopgb-plugin-host = { path = "../slopgb-plugin-host" }

[lints]
workspace = true
