[package]
name = "slopgb"
description = "Game Boy / Game Boy Color emulator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slopgb-core = { path = "../slopgb-core" }
slopfp = { path = "../slopfp" }
winit = "0.30"
softbuffer = "0.4"
cpal = "0.16"

[lints]
workspace = true
