[package]
name = "slopgb"
description = "Game Boy / Game Boy Color emulator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
slopgb-core = { path = "../slopgb-core" }
slopfp = { path = "../slopfp" }
slopgb-plugin-host = { path = "../slopgb-plugin-host" }
slopgb-sgb-coprocessor = { path = "../slopgb-sgb-coprocessor" }
slopgb-sf2 = { path = "../slopgb-sf2" }
winit = "0.30"
softbuffer = "0.4"
cpal = "0.16"
gilrs = "0.11"

[lints]
workspace = true
