# Own workspace root so it builds standalone under the outer workspace's tree.
[workspace]

[package]
name = "slopgb-reference-tools"
description = "Reference tool plugins: the built-in MCP debug tools, ported to the plugin ABI."
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
slopgb-plugin-api = { path = "../../slopgb-plugin-api" }

[profile.release]
opt-level = "z"
strip = true
